[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "Leetcode solutions"
authors = ["Ashley Connor <me@ashleyconnor.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.3"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
